<resources>
    <string name="app_name">ActivRun</string>
    <string name="welcome">Welcome in ActivRun !</string>
    <string name="password">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="noAccount">No accout? Let\'s sign up.</string>
    <string name="letsSignUp">Let\'s sign up !</string>
    <string name="name">"Name "</string>
    <string name="surname">"Surname "</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="sex">Sex:</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="confirmEmail">Confirm e-mail</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="err_name">Enter your name correctly [1-25 char, Polish alphabet]</string>
    <string name="err_surname">Enter your surname correctly [1-25 char, Polish alphabet]</string>
    <string name="err_height">Enter the correct height</string>
    <string name="err_weight">Enter the correct weight</string>
    <string name="err_email">Enter the correct email</string>
    <string name="err_email2">E-mails are not the same</string>
    <string name="err_login">Enter the correct login [3-25 char, English alphabet, number]</string>
    <string name="err_password">Enter your password correctly [minimum 8 char, in this minimum one of [a-z],[A-Z],[0-9],[special character]]</string>
    <string name="err_password2">Passwords are not the same</string>
    <string name="dateBirth">Date of birth: 01/01/1990</string>
    <string name="personalData">Personal data:</string>
    <string name="accountData">Account data:</string>

    <string name="loginExist">The given login exists in the database !</string>
    <string name="emailExist">The given email exists in the database !</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="workout">Workout</string>
    <string name="other">Other</string>
    <string name="calculators">Calculators</string>
    <string name="history">Workouts history</string>
    <string name="account">Account</string>
    <string name="setting">Settings</string>
    <string name="MY_PREFERENCES" translatable="false">my_preferences</string>
    <string name="title_activity_workout_drawer" translatable="false">WorkoutActivityDRAWER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="exitTitle">Close application</string>
    <string name="exitMessage">Are you sure you want to close application?</string>
    <string name="SignOutTitle">Sign Out</string>
    <string name="SignOutMessage">Are you sure you want to sign out?</string>
    <string name="FinishWorkoutTitle">Finish workout</string>
    <string name="FinishWorkoutMessage">Are you sure you want to finish the workout?</string>
    <string name="paceCalcTV">Pace Calculator</string>
    <string name="timeCalcTV">Time Calculator</string>
    <string name="distanceCalcTV">Distance Calculator</string>
    <string name="lapTimeCalcTV">Lap Time Calculator</string>
    <string name="bmiCalcTV">BMI Calculator</string>
    <string name="kcalCalcTV">Calories Burned Calculator</string>
    <string name="pulseCalcTV">Maximum Heart Rate</string>
    <string name="calculateIt">Calculate !</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="hours" translatable="false">h </string>
    <string name="paceNull">Pace: ??:?? min/km</string>
    <string name="speedNull">Speed: ??.?? km/h</string>
    <string name="pace">Pace:</string>
    <string name="speed">Speed:</string>
    <string name="timeNull">Time: ??h ??m ??s</string>
    <string name="distanceNull">Distance: ?? km ??? m</string>
    <string name="conversionCalcTV">Conversion Calculator</string>
    <string name="paceToSpeed">Pace to speed</string>
    <string name="speedToPace">Speed to pace</string>
    <string name="goal">Goal:</string>
    <string name="kilometer">Kilometer</string>
    <string name="lapTime">Lap time</string>
    <string name="heightBMI">Height:</string>
    <string name="weightBMI">Weight:</string>
    <string name="bmi">BMI:</string>
    <string name="averageSlope">Average slope of the area:</string>
    <string name="burntKcal">Burnt kilocalories:</string>
    <string name="age">Age:</string>
    <string name="years">years</string>
    <string name="maxHR">Maximum heart rate:</string>
    <string name="workoutTime">Workout time:</string>
    <string name="calories">Calories:</string>
    <string name="avgSpeed">Avg. speed:</string>
    <string name="avgPace">Avg. pace:</string>
    <string name="startDate">Start date:</string>
    <string name="stopDate">Stop date:</string>
    <string name="edit">Edit</string>
    <string name="comment">Comment:</string>
    <string name="save">Save</string>
    <string name="incorrectData">Incorrect data in</string>
    <string name="emptyField">Empty text field</string>
    <string name="workoutTimeLonger">Workout time can\'t be longer than time</string>
    <string name="calendar">Calendar</string>
    <string name="addEdit">Show, add or edit note</string>
    <string name="notes">Notes:</string>
    <string name="back">Back</string>
    <string name="colorInCalendar">Color in the calendar:</string>
    <string name="title">Title:</string>
    <string name="noEventText">No notes for that day</string>
    <string name="addTitle">Add title</string>
    <string name="addNoteText">Add note text</string>
    <string name="addNote">Add note</string>
    <string name="removeNote">Delete note</string>
    <string name="removeWorkout">Delete workout</string>
    <string name="removeWorkoutMessage">Are you sure you want to delete this workout?</string>
    <string name="removeNoteMessage">Are you sure you want to delete this note?</string>
    <string name="statistics">Statistics</string>
    <string name="totalWorkoutTime">Total workout time:</string>
    <string name="totalDistance">Total distance:</string>
    <string name="totalCalories">Total kilocalories burned:</string>
    <string name="currentPassword">Current password:</string>
    <string name="newPassword">New password:</string>
    <string name="confirmNewPassword">Confirm new password:</string>
    <string name="dateBirthText">Date of birth:</string>
    <string name="name2">Name:</string>
    <string name="surname2">Surname:</string>
    <string name="height2">Height (cm):</string>
    <string name="weight2">Weight (kg):</string>
    <string name="email2" translatable="false">E-mail:</string>
    <string name="confirmEmail2">Confirm e-mail:</string>
    <string name="incorrectPassword">Current password incorrect</string>
    <string name="changePassword">Change password:</string>
    <string name="dataSaved">Data saved !</string>
    <string name="title_activity_set_admin_password" translatable="false">setAdminPassword</string>
    <string name="setAdminPassword">Set admin password</string>
    <string name="password2">Password:</string>
    <string name="passwordMin">Password: [minimum 3 characters]</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>

    <string name="backPressedAdminTitle">Admin password</string>
    <string name="backPressedAdminMessage">You must set an administrator password</string>
    <string name="delete">Delete</string>
    <string name="articles">Articles</string>
    <string name="addArticle">Add article</string>
    <string name="text">Text:</string>
    <string name="addText">Add text</string>
    <string name="author">Author:</string>
    <string name="date">Date:</string>
    <string name="emptyTitleArticle">You must add the title of the article</string>
    <string name="emptyText">You must add the article text</string>
    <string name="emptyAuthor">You must add the author of the article</string>
    <string name="addAuthor">Add author</string>
    <string name="removeArticle">Delete article</string>
    <string name="removeArticleMessage">Are you sure you want to delete the article?</string>
    <string name="emptyTitleNotes">You must add the title of the note</string>
    <string name="emptyTextNotes">You must add the note text</string>
    <string name="signOut">Sign out</string>
    <string name="rememberPassword">Remember the password</string>
    <string name="users">Users</string>
    <string name="deleteUser">Delete user</string>
    <string name="deleteUserMessage">Are you sure you want to delete the user?</string>
    <string name="removeAdminMessage">You can not delete the administrator account</string>
    <string name="login2" translatable="false">Login:</string>
    <string name="resetPassword">Reset password</string>
    <string name="resetPasswordMessage">Are you sure you want to reset user password? (set to \'123\')</string>
    <string name="passwordResetSuccessfully">Password has been successfully reset.</string>
    <string name="signUpSuccessfully">User signed up successfully.</string>
    <string name="deleteAccount">Delete account</string>
    <string name="deleteAccountMessage">Are you sure you want to delete your account?</string>
    <string name="incorrectLoginOrPassword">Incorrect login or password</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="caloriesHour">Calories/hour:</string>
    <string name="noGPS">Turn on the location on the phone or wait for it to be determined</string>
    <string name="neededLocation">The application needs access to the location to work properly</string>
    <string name="noLocationData">No location data !</string>
    <string name="noGPSTryAgain">" and try again by pressing the start button"</string>


</resources>
