<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_nameSurnameShow"
            android:title="@string/name"
            >
        <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_workout"
                android:icon="@drawable/ic_activrun_logo"
                android:title="@string/workout" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/history" />
            <item
                android:id="@+id/nav_calendar"
                android:icon="@drawable/ic_calendar"
                android:title="@string/calendar" />
            <item
                android:id="@+id/nav_statistics"
                android:icon="@drawable/ic_statistics"
                android:title="@string/statistics" />
            <item
                android:id="@+id/nav_calculators"
                android:icon="@drawable/ic_calculator"
                android:title="@string/calculators" />
            <item
                android:id="@+id/nav_articles"
                android:icon="@drawable/ic_articles"
                android:title="@string/articles" />

        </group>
        </menu>
        </item>


    <item android:title="@string/other">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_account"
                    android:title="@string/account" />
                <item
                    android:id="@+id/nav_users"
                    android:icon="@drawable/ic_users"
                    android:title="@string/users" />
                <item
                    android:id="@+id/nav_signOut"
                    android:icon="@drawable/ic_signout"
                    android:title="@string/signOut" />

            </group>

        </menu>
    </item>

    </group>

</menu>
