<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FragmentArticleEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activrun_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="@color/black"

        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

        <EditText
            android:id="@+id/articleEditTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/addTitle"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/text"
            android:textSize="20sp"
            android:textColor="@color/black"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <EditText
            android:id="@+id/articleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/addText"


            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/author"
            android:textSize="20sp"
            android:textColor="@color/black"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <EditText
            android:id="@+id/articleEditAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/addAuthor"


            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/date"
            android:textSize="20sp"
            android:textColor="@color/black"

            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <TextView
            android:id="@+id/articleEditDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="01/01/2019"
            android:textSize="20sp"
            android:textColor="@color/myTextColor"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"

            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            >

            <Button
                android:id="@+id/articleEditSaveBtn"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:text="@string/save"
                android:background="@drawable/rounded_login_button"
                android:layout_weight="1"


                android:layout_marginLeft="20dp"
                android:layout_marginRight="60dp"
                />

            <Button
                android:id="@+id/articleEditBackBtn"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:text="@string/back"
                android:background="@drawable/rounded_login_button"
                android:layout_weight="1"

                android:layout_marginRight="20dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/articleEditDeleteBtn"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/removeArticle"
            android:background="@drawable/rounded_login_button"

            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            />


    </LinearLayout>

    </LinearLayout>

</ScrollView>