<android.support.v7.widget.CardView style="@style/calculator_cardview"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/buttonColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="#00ffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/pulseCalcTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"

            android:text="@string/pulseCalcTV"
            android:textSize="20sp"
            android:textColor="@color/myTextColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"

        android:orientation="horizontal"
        android:gravity="center"
        >

        <RadioGroup
            android:id="@+id/pulseRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:gravity="center_horizontal"

            >

            <RadioButton
                android:id="@+id/pulseMaleRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"

                android:textColor="@color/myTextColor"
                android:textSize="16sp"
                android:text="@string/Male"
                />


            <RadioButton
                android:id="@+id/pulcaFemaleRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"

                android:textColor="@color/myTextColor"
                android:textSize="15sp"
                android:text="@string/Female"
                />


        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/age"
            />

        <EditText
            android:id="@+id/pulseAgeET"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:inputType="number"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/years"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/weightBMI"
            />

        <EditText
            android:id="@+id/pulseWeightET"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:inputType="numberDecimal"
            android:maxLines="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="kg"/>

    </LinearLayout>

        <TextView
            android:id="@+id/pulseHRTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/maxHR"/>

        <Button
            android:id="@+id/pulseCalcBtn"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:text="@string/calculateIt"
            android:background="@drawable/rounded_button_stroke"

            android:layout_marginTop="10dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp" />

    </LinearLayout>

</android.support.v7.widget.CardView>