<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FragmentUsersEdit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/activrun_background">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:text="@string/login2"
                style="@style/accountTV" />

            <EditText
                android:id="@+id/usersEditLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:text="@string/name2"
                style="@style/accountTV" />

            <EditText
                android:id="@+id/usersEditName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:text="@string/surname2"
                style="@style/accountTV" />

            <EditText
                android:id="@+id/usersEditSurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:text="@string/dateBirthText"
                style="@style/accountTV"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/usersEditDate"
                android:text=" 01/01/1990"
                style="@style/accountTV"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                />

            <ImageButton
                android:id="@+id/userEditBirthdayImageBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:src="@drawable/ic_calendar"
                android:background="@android:color/transparent"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:text="@string/height2"
                style="@style/accountTV" />

            <EditText
                android:id="@+id/usersEditHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:text="@string/weight2"
                style="@style/accountTV" />

            <EditText
                android:id="@+id/usersEditWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:text="@string/email2"
                style="@style/accountTV" />

            <EditText
                android:id="@+id/usersEditEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"

        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/usersEditSaveButton"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"

            android:background="@drawable/rounded_login_button"
            android:text="@string/save" />

        <Button
            android:id="@+id/usersEditResetPasswordButton"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_login_button"

            android:text="@string/resetPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/usersEditDeleteUserButton"
        android:layout_width="match_parent"
        android:layout_height="32dp"

        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"

        android:background="@drawable/rounded_login_button"

        android:text="@string/deleteUser" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>